[package]
name = "aoc_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}
itertools = "0.10.5"

[dependencies]
aocf = {version = "0.1.18", features = ["html_parsing"]}
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
euclid = "0.22.7"

[[bench]]
name = "bench_main"
harness = false
